deploy.yaml
apiVersion: v1
kind: Route
metadata:
  name: prom
spec:
  tls:
    terminatino: edge
  port:
    targetPort: http
  to:
    kind: Service
    name: prom
---
apiVersion: v1
kind: Service
metadata:
  name: prom
spec:
  selector:
    app: prom
  ports:
  - name: http
    port: 80
    targetPort: 9090
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: prom
  labels:
    app: prom
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prom
  template:
    metadata:
      labels:
        app: prom
    spec:
      serviceAccountName: prom
      containers:
      - name: prom
        image: prom/prometheus
        command:
        - /bin/prometheus
        - --config.file=/tmp/prom-conf/prometheus.yml
        - --storage.tsdb.path=/prometheus
        - --web.console.libraries=/usr/share/prometheus/console_libraries
        - --web.console.templates=/usr/share/prometheus/consoles
        ports:
        - containerPort: 9090
        volumeMounts:
        - name: prom-conf
          mountPath: /tmp/prom-conf
        - name: prom-rules
          mountPath: /tmp/prom-rules
      volumes:
      - name: prom-conf
        configMap:
          name: prom-conf
      - name: prom-rules
        configMap:
          name: prom-rules
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: grafana
  labels:
    app: grafana
spec:
  replicas: 1
  selector:
    matchLabels:
      app: grafana
  template:
    metadata:
      labels:
        app: grafana
    spec:
      containers:
      - name: grafana
        image: grafana/grafana
        ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Route
metadata:
  name: grafana
spec:
  tls:
    terminatino: edge
  port:
    targetPort: http
  to:
    kind: Service
    name: grafana
---
apiVersion: v1
kind: Service
metadata:
  name: grafana
spec:
  selector:
    app: grafana
  ports:
  - name: http
    port: 80
    targetPort: 3000
